maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: value ==- is not a member of Int
    if (somAng==4||somAng==-4){
                         ^Escaper:27: error: not found: value fzg
  var g=fzg
        ^